--- a/src/main/resources/templates/helloworld.html
+++ b/src/main/resources/templates/helloworld.html
@@ -4,14 +4,20 @@
 <head>
     <title>Thymeleaf Demo</title>
 
-    <!-- reference css file -->
-    <link rel="stylesheet"
-          th:href="@{/css/demo.css}" />
+
 </head>
 
 <body>
 
-    <p th:text="'Time on the server is ' + ${theDate}" class="funny"></p>
+Hello World of Spring!
+
+<br><br>
+
+Student name: <span th:text="${param.studentName}" />
+
+<br><br>
+
+The message: <span th:text="${message}" />
 
 </body>
 
