--- a/src/main/resources/templates/customer-confirmation.html
+++ b/src/main/resources/templates/customer-confirmation.html
@@ -16,5 +16,10 @@ Free passes: <span th:text="${customer.freePasses}" />
 
 Postal Code: <span th:text="${customer.postalCode}" />
 
+<br><br>
+
+Course Code: <span th:text="${customer.courseCode}" />
+
+
 </body>
 </html>
